added the nrf submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "simulator/influx-query"]
 	path = simulator/influx-query
 	url = git@github.com:lab11/influx-query.git
+[submodule "software/nrf5x-base"]
+	path = software/nrf5x-base
+	url = git@github.com:lab11/nrf5x-base
