--- a/software/apps/max44009_test/Makefile
+++ b/software/apps/max44009_test/Makefile
@@ -3,6 +3,7 @@ PROJECT_NAME = $(shell basename "$(realpath ./)")
 APPLICATION_SRCS = $(notdir $(wildcard ./*.c))
 APPLICATION_SRCS += nrf_sdh.c
 APPLICATION_SRCS += nrf_section_iter.c
+APPLICATION_SRCS += nrf_queue.c
 APPLICATION_SRCS += nrf_soc.c
 APPLICATION_SRCS += app_error.c
 APPLICATION_SRCS += app_error_weak.c
@@ -11,6 +12,7 @@ APPLICATION_SRCS += app_util_platform.c
 APPLICATION_SRCS += nrf_drv_common.c
 APPLICATION_SRCS += nrf_drv_gpiote.c
 APPLICATION_SRCS += nrf_drv_twi.c
+APPLICATION_SRCS += nrf_twi_mngr.c
 APPLICATION_SRCS += app_gpiote.c
 APPLICATION_SRCS += nrf_drv_clock.c
 APPLICATION_SRCS += nrf_drv_uart.c
