fixed library - add cs pins

--- a/software/apps/lis2dw12_test/Makefile
+++ b/software/apps/lis2dw12_test/Makefile
@@ -19,7 +19,7 @@ APPLICATION_SRCS += app_uart_fifo.c
 APPLICATION_SRCS += retarget.c
 APPLICATION_SRCS += led.c
 
-APPLICATION_SRCS += max44009.c
+APPLICATION_SRCS += lis2dw12.c
 
 NRF_MODEL = nrf52840
 SDK_VERSION = 14
