Driver and test app for accelerometer

--- a/software/apps/lis2dw12_test/Makefile
+++ b/software/apps/lis2dw12_test/Makefile
@@ -3,14 +3,15 @@ PROJECT_NAME = $(shell basename "$(realpath ./)")
 APPLICATION_SRCS = $(notdir $(wildcard ./*.c))
 APPLICATION_SRCS += nrf_sdh.c
 APPLICATION_SRCS += nrf_section_iter.c
+APPLICATION_SRCS += nrf_queue.c
 APPLICATION_SRCS += nrf_soc.c
 APPLICATION_SRCS += app_error.c
 APPLICATION_SRCS += app_error_weak.c
-APPLICATION_SRCS += app_timer.c
 APPLICATION_SRCS += app_util_platform.c
 APPLICATION_SRCS += nrf_drv_common.c
 APPLICATION_SRCS += nrf_drv_gpiote.c
 APPLICATION_SRCS += nrf_drv_spi.c
+APPLICATION_SRCS += nrf_spi_mngr.c
 APPLICATION_SRCS += app_gpiote.c
 APPLICATION_SRCS += nrf_drv_clock.c
 APPLICATION_SRCS += nrf_drv_uart.c
