sleep app on sdk15

--- a/software/apps/do_nothing_well/Makefile
+++ b/software/apps/do_nothing_well/Makefile
@@ -4,24 +4,24 @@ APPLICATION_SRCS = $(notdir $(wildcard ./*.c))
 APPLICATION_SRCS += app_timer.c
 APPLICATION_SRCS += app_error.c
 APPLICATION_SRCS += app_error_weak.c
-APPLICATION_SRCS += app_gpiote.c
-APPLICATION_SRCS += nrf_drv_common.c
-APPLICATION_SRCS += nrf_sdh.c
 APPLICATION_SRCS += nrf_section_iter.c
 APPLICATION_SRCS += app_util_platform.c
 APPLICATION_SRCS += nrf_pwr_mgmt.c
-APPLICATION_SRCS += led.c
-APPLICATION_SRCS += nrf_drv_clock.c
-APPLICATION_SRCS += nrf_drv_spi.c
-APPLICATION_SRCS += nrf_drv_uart.c
+APPLICATION_SRCS += nrfx_clock.c
+APPLICATION_SRCS += nrfx_spi.c
+APPLICATION_SRCS += nrfx_uart.c
+APPLICATION_SRCS += nrfx_power.c
 APPLICATION_SRCS += app_fifo.c
 APPLICATION_SRCS += app_uart_fifo.c
 APPLICATION_SRCS += retarget.c
 
-NRF_MODEL = nrf52840
+NRF_IC = nrf52840_xxaa
 
-SDK_VERSION = 14
+SDK_VERSION = 15
 SOFTDEVICE_MODEL = s140
+ifdef SOFTDEVICE_MODEL
+  APPLICATION_SRCS += nrf_sdh.c
+endif
 
 LIBRARY_PATHS += ./ ../../include/ ../../chips/
 SOURCE_PATHS += ./ ../../chips/
