add temperature + pressure to coap app

--- a/software/apps/permamote_coap/Makefile
+++ b/software/apps/permamote_coap/Makefile
@@ -36,6 +36,7 @@ APPLICATION_SRCS += thread_coap.c
 APPLICATION_SRCS += device_id.c
 
 APPLICATION_SRCS += max44009.c
+APPLICATION_SRCS += ms5637.c
 
 NRF_IC = nrf52840_xxaa
 SDK_VERSION = 15
