Stored a variable in flash

--- a/software/apps/thread_flash_variables_test/Makefile
+++ b/software/apps/thread_flash_variables_test/Makefile
@@ -11,8 +11,9 @@ APP_HEADER_PATHS += .
 APP_SOURCE_PATHS += .
 APP_SOURCES = $(notdir $(wildcard ./*.c))
 
-NRF_BASE_DIR ?= ../../../
+NRF_BASE_DIR ?= ../../nrf5x-base
+LINKER_SCRIPT = $(NRF_BASE_DIR)/make/ld/gcc_nrf52840_dfu_blank_0_256_1024.ld
 # Include board Makefile (if any)
-include $(NRF_BASE_DIR)/boards/nrf52840_thread/Board.mk
+include $(NRF_BASE_DIR)/../boards/permamote/Board.mk
 # Include main Makefile
 include $(NRF_BASE_DIR)/make/AppMakefile.mk
