--- a/simulator/scripts/workload_configs/door_occupancy.yaml
+++ b/simulator/scripts/workload_configs/door_occupancy.yaml
@@ -3,10 +3,10 @@ workload:
   type: 'reactive'
   curve: 'workload_configs/curves/c098e5900064_reactive_curve.npy'
   lambda: 500
-  sleep_current_A: 1.5E-6
-  startup_energy_J: 150.E-6
-  startup_period_s: 3.4E-3
-  event_energy_J: 8.62E-5
-  event_period_s: 3.E-3
-  event_period_min_s: 3.E-3
+  sleep_current_A: 1.5e-6
+  startup_energy_J: 150.0e-6
+  startup_period_s: 3.4e-3
+  event_energy_J: 8.62e-5
+  event_period_s: 3.0e-3
+  event_period_min_s: 3.0e-3
   atomic: True
