--- a/simulator/scripts/workload_configs/ligeiro_sns.yaml
+++ b/simulator/scripts/workload_configs/ligeiro_sns.yaml
@@ -3,9 +3,9 @@ workload:
   type: 'periodic'
   atomic: True
   period_s: 10
-  sleep_current_A: 1.E3,
+  sleep_current_A: 1.0e+3
   startup_energy_J: 0
   startup_period_s: 0
-  event_energy_J': !!python/object/apply:eval [ .5 * 500E-6 * (2.2**2 - 0.8**2) ]
-  event_period_s: 50.E-3
-  event_period_min_s: 50.E-3
+  event_energy_J: 0.00105 # .5 * 500E-6 * (2.2**2 - 0.8**2)
+  event_period_s: 50.0e-3
+  event_period_min_s: 50.0E-3
