--- a/software/apps/bg_bootloader/Makefile
+++ b/software/apps/bg_bootloader/Makefile
@@ -8,9 +8,9 @@ USE_THREAD = 1
 USE_MBR = 1
 USE_BLE = 0
 LINKER_SCRIPT = thread_dfu_bootloader.ld
-#LDFLAGS += --specs=nano.specs
-#CFLAGS += -flto
-CFLAGS += -D__HEAP_SIZE=0
+LDFLAGS += --specs=nano.specs
+CFLAGS += -flto
+#CFLAGS += -D__HEAP_SIZE=0
 
 # Source and header files
 SDK_CONFIG_DEFAULT =
