Don't need `make flash_first_dfu` anymore!

--- a/software/apps/permamote_coap/Makefile
+++ b/software/apps/permamote_coap/Makefile
@@ -5,6 +5,7 @@ NRF_IC = nrf52840
 SDK_VERSION = 15
 SOFTDEVICE_MODEL = blank
 USE_THREAD = 1
+USE_BOOTLOADER = 1
 
 # Source and header files
 APP_HEADER_PATHS += .
