Use nanopb instead of protobuf-c
Update nordic's use of nanopb and patch implementation
Update permamote app to use protobuf
Need to fix cloud infrastructure to support protobufs
Need to figure out platform/version independent way of generating proto
c code

--- a/software/apps/permamote_coap/Makefile
+++ b/software/apps/permamote_coap/Makefile
@@ -14,7 +14,14 @@ APP_SOURCES = $(notdir $(wildcard ./*.c))
 
 NRF_BASE_DIR ?= ../../nrf52x-base
 LINKER_SCRIPT = $(NRF_BASE_DIR)/make/ld/gcc_nrf52840_dfu_blank_0_256_1024.ld
+
 # Include board Makefile (if any)
 include $(NRF_BASE_DIR)/../boards/permamote/Board.mk
 # Include main Makefile
 include $(NRF_BASE_DIR)/make/AppMakefile.mk
+
+# TODO: make this a platform/version independent process!
+proto:
+	protoc -I/usr/local/Cellar/protobuf/3.10.0/include -I/usr/local/Cellar/nanopb-generator/0.3.9.3/libexec/proto/ -I. --nanopb_out=. permamote_message.proto
+clean-proto:
+	rm permamote_message.pb*
