--- a/software/apps/permamote_coap/Makefile
+++ b/software/apps/permamote_coap/Makefile
@@ -11,6 +11,7 @@ USE_BOOTLOADER = 1
 APP_HEADER_PATHS += .
 APP_SOURCE_PATHS += .
 APP_SOURCES = $(notdir $(wildcard ./*.c))
+APP_SOURCES += $(notdir $(wildcard ./*.proto))
 
 NRF_BASE_DIR ?= ../../nrf52x-base
 LINKER_SCRIPT = $(NRF_BASE_DIR)/make/ld/gcc_nrf52840_dfu_blank_0_256_1024.ld
@@ -19,9 +20,3 @@ LINKER_SCRIPT = $(NRF_BASE_DIR)/make/ld/gcc_nrf52840_dfu_blank_0_256_1024.ld
 include $(NRF_BASE_DIR)/../boards/permamote/Board.mk
 # Include main Makefile
 include $(NRF_BASE_DIR)/make/AppMakefile.mk
-
-# TODO: make this a platform/version independent process!
-proto:
-	protoc -I/usr/local/Cellar/protobuf/3.10.0/include -I/usr/local/Cellar/nanopb-generator/0.3.9.3/libexec/proto/ -I. --nanopb_out=. permamote_message.proto
-clean-proto:
-	rm permamote_message.pb*
