taking pictures + ntp + dns

--- a/software/apps/permacam/camera_coap/Makefile
+++ b/software/apps/permacam/camera_coap/Makefile
@@ -2,11 +2,13 @@ PROJECT_NAME = $(shell basename "$(realpath ./)")
 
 # Configurations
 NRF_IC = nrf52840
-SDK_VERSION = 15
+SDK_VERSION = 16
 SOFTDEVICE_MODEL = blank
 USE_THREAD = 1
 USE_BOOTLOADER = 1
 PROTO_DIR = ../../../../docs/gateway/
+
+CONFIGURATION_VARS += __HEAP_SIZE=0x20000
 
 # Source and header files
 APP_HEADER_PATHS += .
