--- a/.travis.yml
+++ b/.travis.yml
@@ -4,18 +4,18 @@ language: c
 os: linux
 dist: bionic
 
+env:
+  - APPS_DIR=software/apps PK=.travis/dummy.pem
+
 install:
   - sudo add-apt-repository ppa:team-gcc-arm-embedded/ppa -y
   - sudo apt update
   - sudo apt install gcc-arm-embedded -y
-  - sudo apt install python3 python3-pip python3-setuptools -y
-  - git clone https://github.com/NordicSemiconductor/pc-nrfutil.git
-  - cd pc-nrfutil
-  - python3 setup.py install
-  - cd -
+  - sudo apt install python python-pip python-setuptools -y
+  - sudo pip install nrfutil --ignore-installed PyYAML
 
 jobs:
   include:
     - stage: "build"
       script:
-      - TRAVIS_BUILD_DIR=software/apps .travis/build_dir.sh
+      - APPS_DIR=software/apps .travis/build_dir.sh
