Fix up a bunch of apps

--- a/software/apps/just_thread/Makefile
+++ b/software/apps/just_thread/Makefile
@@ -2,14 +2,16 @@ PROJECT_NAME = $(shell basename "$(realpath ./)")
 
 # Configurations
 NRF_IC = nrf52840
-SDK_VERSION = 15
+SDK_VERSION = 16
 SOFTDEVICE_MODEL = blank
 USE_THREAD = 1
+PROTO_DIR = ../../../docs/gateway/
 
 # Source and header files
 APP_HEADER_PATHS += .
 APP_SOURCE_PATHS += .
 APP_SOURCES = $(notdir $(wildcard ./*.c))
+APP_SOURCES += parse.proto
 
 NRF_BASE_DIR ?= ../../nrf52x-base
 # Include board Makefile (if any)
