add travis for permacam

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,3 +19,4 @@ jobs:
     - stage: "build"
       script:
       - .travis/build_dir.sh
+      - APPS_DIR=software/apps/permacam .travis/build_dir.sh
