--- a/software/apps/permamote_coap/Makefile
+++ b/software/apps/permamote_coap/Makefile
@@ -7,6 +7,7 @@ SOFTDEVICE_MODEL = blank
 USE_THREAD = 1
 USE_GATEWAY = 1
 USE_BOOTLOADER = 1
+BOOTLOADER = bg_bootloader
 PROTO_DIR = ../../../docs/gateway/
 
 # Source and header files
@@ -17,7 +18,6 @@ APP_SOURCES += $(notdir $(wildcard ./*.proto))
 APP_SOURCES += parse.proto
 
 NRF_BASE_DIR ?= ../../nrf52x-base
-LINKER_SCRIPT = $(NRF_BASE_DIR)/make/ld/gcc_nrf52840_dfu_blank_0_256_1024.ld
 
 # Include board Makefile (if any)
 include $(NRF_BASE_DIR)/../boards/permamote/Board.mk
