--- a/simulator/scripts/workload_configs/permacam_event.yaml
+++ b/simulator/scripts/workload_configs/permacam_event.yaml
@@ -2,7 +2,7 @@ workload:
   name: 'door_occupancy'
   type: 'reactive'
   curve: 'workload_configs/curves/c098e5900064_reactive_curve.npy'
-  lambda: 12
+  lambda: 12 # at peak, an event every 5 minutes
   backoff_s: 120
   sleep_current_A: 3.5e-6
   startup_energy_J: 150.e-6
