--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,9 @@ install:
   - sudo add-apt-repository ppa:team-gcc-arm-embedded/ppa -y
   - sudo apt update
   - sudo apt install gcc-arm-embedded -y
-  - sudo apt install python python-pip python-setuptools -y
-  - sudo pip install nrfutil --ignore-installed PyYAML
+  - sudo apt install python-setuptools python3-setuptools python python3 python3-pip python-pip -y
+  - pip3 install pip --upgrade
+  - pip3 install nrfutil
 
 jobs:
   include:
