--- a/simulator/scripts/dataset_configs/setupd_outside_dataset.yaml
+++ b/simulator/scripts/dataset_configs/setupd_outside_dataset.yaml
@@ -1,6 +1,6 @@
 dataset:
   name: "SetupD"
   type: "solar"
-  unit: "uW/cm^2"
+  unit: "W/cm^2"
   filename: "../enhants/numpy_arrays/SetupD_outdoor.npy"
   resolution_s: 30
