--- a/simulator/scripts/design_configs/ideal_config_primary.yaml
+++ b/simulator/scripts/design_configs/ideal_config_primary.yaml
@@ -10,16 +10,17 @@ design_config:
 
 secondary_config:
   type: "capacitor"
-  capacity_J: 1
+  capacity_J: 1000
   min_capacity_J: 0
   esr_ohm: 0
   leakage_power_W: 0
+  secondary_start_percent: 1
 
 primary_config:
   name : "primary"
   #capacity_mAh : 30 #CR927
-  capacity_mAh : 240 #CR2032
-  #capacity_mAh : 1500 #CR123A
+  #capacity_mAh : 240 #CR2032
+  capacity_mAh : 1500 #CR123A
   nominal_voltage_V : 3
   leakage_percent_year : 1
 
