--- a/simulator/scripts/sweep_config/camaroptera_sweep.yaml
+++ b/simulator/scripts/sweep_config/camaroptera_sweep.yaml
@@ -3,4 +3,5 @@ sweep:
     type: 'design'
     path: ['secondary_config', 'capacity_J']
     group: False
-    values: [0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 20, 30, 40, 50, 60, 70, 80, 100, 200, 300, 400, 500, 600, 700, 800, 1000]
+    values: [0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 20, 30, 40, 50, 60, 70, 80, 90, 100, 200, 300, 400, 500, 600, 700, 800, 900, 1000, 2000, 3000, 4000, 5000, 6000, 7000, 8000, 9000, 10000, 20000]
+    #values: [0.1, 1, 10, 100, 1000, 10000, 100000]
