--- a/simulator/scripts/workload_configs/camaroptera.yaml
+++ b/simulator/scripts/workload_configs/camaroptera.yaml
@@ -1,11 +1,12 @@
 workload:
   name: 'picture_and_send'
-  type: 'periodic'
+  type: 'opportunistic'
   atomic: False
-  period_s: 120
   sleep_current_A: 197.e-6
+  #startup_energy_J: 6.6E-3
+  #startup_period_s: 0.2
   startup_energy_J: 150.e-6
   startup_period_s: 3.4e-3
-  event_energy_J: 311.e-3 #430.e-3 #326.e-3 #393.e-3
-  event_period_s: 4
+  event_energy_J: 0.781 # 3.06 + 0.253 + 66 + 40 + 96 * 7 mJ
+  event_period_s: 40 # 0.6 + 0.046 + 12 + 7.23 + 0.8 * 7
   event_period_min_s: 1
